--- a/app/views/koin/show.html.erb
+++ b/app/views/koin/show.html.erb
@@ -1,25 +1,24 @@
-<html>
-  <head>
-    <title>Your Viewable Files</titles>
-  </head>
-  <body>
-    <table id="filetable">
-      <tr>
-        <th>Filename</th>
-        <th>Hash</th>
-        <th>Size</th>
-        <th>Expiration</th>
-        <th>Action</th>
-      </tr>
-      <% for file in @files %>
-      <tr>
-        <th><%= File.baename(file.path) %></th>
-        <th><%= file.token_id %></th>
-        <th><%= File.size %></th>
-        <th>&nbsp;</th>
-        <th><submit_tag "Delete"></th>
-      </tr>
+    <table border="1" id="filetable">
+      <% if @files.length > 0 %>
+        <tr>
+          <th>Filename</th>
+          <th>URL</th>
+          <th>Size</th>
+          <th>Creator</th>
+          <th>Expiration</th>
+          <th>Action</th>
+        </tr>
+        <% for file in @files %>
+          <tr>
+            <td><%= File.basename(file.path) %></td>
+            <td><a href="<%= "http://#{request.host_with_port}/token/#{file.token_id}" %>"><%= File.basename(file.path) %></a></td>
+            <td><%= File.size(file.path) %></td>
+            <td><%= Users.find(file.creator_id).username %></td>
+            <td>&nbsp;</td>
+            <td><submit_tag "Delete"></td>
+          </tr>
+        <% end %>
+      <% elsif %>
+        <tr><td>No viewable files found.</td></tr>
       <% end %>
     </table>
-  </body>
-</html>
