--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -1,4 +1,21 @@
 section#admin th {
   background-color: #66FFEE;
 }
+
+span.block {
+  display:block;
+}
+
+span.block input {
+  width:375px;
+  border: 1px solid #999;
+  height: 25px;
+  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+}
+
+form div {
+  display: block;
+}
   
