- Created a common layout header for all pages - Provided header options for users depending on their privileges - Created reasonable default actions in helpers if no @user exists - Factored header and styles information from all pages and put into the   layout

--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -18,4 +18,20 @@ span.block input {
 form div {
   display: block;
 }
-  
+
+#first-header {
+  clear: both;
+  overflow: auto;
+  height: 1%;
+}
+#first-header h1 {
+  float: left;
+  text-align: left;
+  width: 49%;
+}
+#first-header span {
+  float: right;
+  text-align: right;
+  width: 49%;
+}
+
