--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -24,10 +24,10 @@
     <% end %>
     <h1>Please Log In</h1>
     <%= form_tag(action: 'auth') do %>
-      <%= label_tag 'username' %>
+      <%= label_tag 'user' %>
       <%= text_field_tag 'user' %>
       <br />
-      <%= label_tag 'password' %>
+      <%= label_tag 'pass' %>
       <%= password_field_tag 'pass' %>
       <br />
       <%= submit_tag 'Submit' %>
