All tests are passing except some forward-looking permissions tests that allow us to designate specific users who can see the pages.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,13 @@
       <h1><%= @action %></h1>
       <span>
         <span>
-        Welcome, <%= logged_user %> || 
-          <a href="/">Share files</a> ||
+        <% if logged_user != "guest" %>
+        Welcome, <%= logged_user %> ||
+        <a href="/">Share files</a> ||
+        <% elsif Koin::Application::ALLOW_GUEST == true %>
+        Welcome, <%= logged_user %> ||
+        <a href="/">Share files</a> ||
+        <% end %>
           <% if is_admin? %>
             <a href="/koin/admin">Administer users</a> ||
           <% end %>
