--- a/app/views/koin/index.html.erb
+++ b/app/views/koin/index.html.erb
@@ -32,6 +32,7 @@
         <%= radio_button_tag :download_perms, 'users' %>Any Logged In User<br />
         <%= radio_button_tag :download_perms, 'specific_users' %>These Users:
         <%= select_tag 'users[selected][]', options_from_collection_for_select(@users, 'id', 'username'), { :multiple => true, :size =>5, :id => "users_selected" } %><br />
+        Optional Password: <%= text_field_tag :pass %><br />
         <% end %>
         <%= submit_tag "Upload" %>
       <% end %>
