--- a/app/views/koin/index.html.erb
+++ b/app/views/koin/index.html.erb
@@ -32,9 +32,11 @@
         <%= radio_button_tag :download_perms, 'users' %>Any Logged In User<br />
         <%= radio_button_tag :download_perms, 'specific_users' %>These Users:
         <%= select_tag 'users[selected][]', options_from_collection_for_select(@users, 'id', 'username'), { :multiple => true, :size =>5, :id => "users_selected" } %><br />
+        <% end %>
+        Subject: <%= text_field_tag :subject %><br />
+        Description: <%= text_area_tag :description, nil, :rows => 5, :cols => 20 %><br />
         Optional Password: <%= text_field_tag :pass %><br />
         Optional Expiration: <%= text_field_tag :expiration %><emphasis>(YYYY-MM-DD HH:MM:SS)</emphasis><br />
-        <% end %>
         <%= submit_tag "Upload" %>
       <% end %>
     </div>
