--- a/app/views/koin/admin.html.erb
+++ b/app/views/koin/admin.html.erb
@@ -1,5 +1,8 @@
 <section id="admin">
     <h1>Administer Users</h1>
+    <%= form_tag '/users/new' do %>
+    <p><%= submit_tag 'Create New User/Group', :id => "creategroup" %></p>
+    <% end %>
     <table>
       <tr>
         <th colspan="5">Users</th>
@@ -13,7 +16,6 @@
       </tr>
       <% @users.each do |u| %>
       <tr>
-      <% logger.debug("attributes = %s" % u.attributes.keys.join(", ")) %>
         <td><%= u.attributes["u.username"] %></td>
         <td><%= u.attributes["num"] %></td>
         <td><%= u.attributes["size"] %></td>
