--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,8 +6,7 @@
 <%= form_for @target_user do |f| %>
   <div>
     <%= f.label "Username:" %>
-    <%= f.hidden_field :username %>
-    <%= @target_user.username %>
+    <%= f.text_field :username %>
   </div>
   <div>
     <%= f.label "Password:" %>
@@ -26,6 +25,6 @@
     <%= f.check_box :p_admin %>
   </div>
   <div>
-    <%= f.submit "Apply" %>
+    <%= f.submit "Create", :id => "create" %>
   </div>
 <% end %>
