--- a/app/views/koin/admin.html.erb
+++ b/app/views/koin/admin.html.erb
@@ -26,7 +26,7 @@
         <td><%= u.attributes["size"] %></td>
         <td><%= u.attributes["u.quota"] ? 0 : "unlimited" %></td>
         <td><%= link_to "Edit", "/users/edit/#{u.attributes['u.id'].to_i}" %> || 
-            <%= link_to "Delete", "/users/delete/#{u.attributes['u.id'].to_i}" %></td>
+            <%= link_to "Delete", "/users/delete/#{u.attributes['u.id'].to_i}", :id => "delete_#{u.attributes['u.id'].to_i}" %></td>
       </tr>
       <% end %>
     </table>
