Fixed/implemented one of the cucumber tests

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -23,7 +23,7 @@
   </div>
   <div>
     <%= f.label "Administrator:" %>
-    <%= f.check_box :p_admin %>
+    <%= f.check_box :p_admin, {}, 1, 0 %>
   </div>
   <div>
   <h2>Child Groups</h2>
