--- a/app/views/koin/show.html.erb
+++ b/app/views/koin/show.html.erb
@@ -8,6 +8,7 @@
           <th>Expiration</th>
           <th>Action</th>
         </tr>
+        <% #debugger %>
         <% for file in @files %>
           <tr>
             <td><%= File.basename(file.path) %></td>
