Added a feature to the user page to disable a user.  It's a link now, but can be styled as a button later (or whatever).

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -40,5 +40,6 @@
   </div>
   <div>
     <%= f.submit "Apply" %>
+    <%= link_to("Disable", "/users/disable/#{@target_user.id}", :id => "disable_#{@target_user.id}", :method => :delete, :confirm => "Are you sure?") %>
   </div>
 <% end %>
