--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -40,6 +40,7 @@
   </div>
   <div>
     <%= f.submit "Apply" %>
+    <%= link_to("Delete", "/users/delete/#{@target_user.id}", :id => "delete_#{@target_user.id}", :method => :post, :confirm => "Are you sure?") %> || 
     <%= link_to("Disable", "/users/disable/#{@target_user.id}", :id => "disable_#{@target_user.id}", :method => :delete, :confirm => "Are you sure?") %>
   </div>
 <% end %>
